--- a/TestProject/Base.lproj/Main.storyboard
+++ b/TestProject/Base.lproj/Main.storyboard
@@ -40,71 +40,8 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="ZqL-uI-2sL">
-                                        <rect key="frame" x="0.0" y="71.5" width="414" height="43.5"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ZqL-uI-2sL" id="igB-ZE-XMw">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Имя" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TKg-dO-pW1">
-                                                    <rect key="frame" x="20" y="5" width="374" height="34"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <textInputTraits key="textInputTraits"/>
-                                                </textField>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="TKg-dO-pW1" firstAttribute="top" secondItem="igB-ZE-XMw" secondAttribute="top" constant="5" id="C6N-3S-U1k"/>
-                                                <constraint firstAttribute="trailing" secondItem="TKg-dO-pW1" secondAttribute="trailing" constant="20" id="E4N-Qc-AUc"/>
-                                                <constraint firstItem="TKg-dO-pW1" firstAttribute="leading" secondItem="igB-ZE-XMw" secondAttribute="leading" constant="20" id="Ifh-B1-PRQ"/>
-                                                <constraint firstAttribute="bottom" secondItem="TKg-dO-pW1" secondAttribute="bottom" constant="5" id="e4v-ub-SdW"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="9wt-b7-Vlk">
-                                        <rect key="frame" x="0.0" y="115" width="414" height="43.5"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9wt-b7-Vlk" id="5J2-Rb-Bbj">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Фамилия" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GMQ-6h-Zee">
-                                                    <rect key="frame" x="20" y="5" width="374" height="34"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <textInputTraits key="textInputTraits"/>
-                                                </textField>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="GMQ-6h-Zee" firstAttribute="top" secondItem="5J2-Rb-Bbj" secondAttribute="top" constant="5" id="0AW-yg-whV"/>
-                                                <constraint firstAttribute="trailing" secondItem="GMQ-6h-Zee" secondAttribute="trailing" constant="20" id="uwH-NR-Fcd"/>
-                                                <constraint firstAttribute="bottom" secondItem="GMQ-6h-Zee" secondAttribute="bottom" constant="5" id="xNN-cy-Qgo"/>
-                                                <constraint firstItem="GMQ-6h-Zee" firstAttribute="leading" secondItem="5J2-Rb-Bbj" secondAttribute="leading" constant="20" id="xTh-iE-IfX"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="gRn-vc-KdI">
-                                        <rect key="frame" x="0.0" y="158.5" width="414" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gRn-vc-KdI" id="m0s-3u-ct5">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Дата рождения" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5XG-JL-ZNF">
-                                                    <rect key="frame" x="20" y="5" width="374" height="34"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <textInputTraits key="textInputTraits"/>
-                                                </textField>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="5XG-JL-ZNF" firstAttribute="top" secondItem="m0s-3u-ct5" secondAttribute="top" constant="5" id="1za-aJ-0IR"/>
-                                                <constraint firstAttribute="trailing" secondItem="5XG-JL-ZNF" secondAttribute="trailing" constant="20" id="CEt-bb-T8j"/>
-                                                <constraint firstAttribute="bottom" secondItem="5XG-JL-ZNF" secondAttribute="bottom" constant="5" id="fQ2-3E-3jf"/>
-                                                <constraint firstItem="5XG-JL-ZNF" firstAttribute="leading" secondItem="m0s-3u-ct5" secondAttribute="leading" constant="20" id="hGL-YR-pcj"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" editingAccessoryType="disclosureIndicator" id="hEa-d2-4po">
-                                        <rect key="frame" x="0.0" y="202.5" width="414" height="44"/>
+                                        <rect key="frame" x="0.0" y="71.5" width="414" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hEa-d2-4po" id="4hJ-hb-EaL">
                                             <rect key="frame" x="0.0" y="0.0" width="383" height="44"/>
@@ -128,6 +65,69 @@
                                             <segue destination="kvD-wi-tas" kind="show" id="JzD-VG-Bfy"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="ZqL-uI-2sL">
+                                        <rect key="frame" x="0.0" y="115.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ZqL-uI-2sL" id="igB-ZE-XMw">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Имя" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TKg-dO-pW1">
+                                                    <rect key="frame" x="20" y="5" width="374" height="34"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="TKg-dO-pW1" firstAttribute="top" secondItem="igB-ZE-XMw" secondAttribute="top" constant="5" id="C6N-3S-U1k"/>
+                                                <constraint firstAttribute="trailing" secondItem="TKg-dO-pW1" secondAttribute="trailing" constant="20" id="E4N-Qc-AUc"/>
+                                                <constraint firstItem="TKg-dO-pW1" firstAttribute="leading" secondItem="igB-ZE-XMw" secondAttribute="leading" constant="20" id="Ifh-B1-PRQ"/>
+                                                <constraint firstAttribute="bottom" secondItem="TKg-dO-pW1" secondAttribute="bottom" constant="5" id="e4v-ub-SdW"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="9wt-b7-Vlk">
+                                        <rect key="frame" x="0.0" y="159" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9wt-b7-Vlk" id="5J2-Rb-Bbj">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Фамилия" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GMQ-6h-Zee">
+                                                    <rect key="frame" x="20" y="5" width="374" height="34"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="GMQ-6h-Zee" firstAttribute="top" secondItem="5J2-Rb-Bbj" secondAttribute="top" constant="5" id="0AW-yg-whV"/>
+                                                <constraint firstAttribute="trailing" secondItem="GMQ-6h-Zee" secondAttribute="trailing" constant="20" id="uwH-NR-Fcd"/>
+                                                <constraint firstAttribute="bottom" secondItem="GMQ-6h-Zee" secondAttribute="bottom" constant="5" id="xNN-cy-Qgo"/>
+                                                <constraint firstItem="GMQ-6h-Zee" firstAttribute="leading" secondItem="5J2-Rb-Bbj" secondAttribute="leading" constant="20" id="xTh-iE-IfX"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="gRn-vc-KdI">
+                                        <rect key="frame" x="0.0" y="202.5" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gRn-vc-KdI" id="m0s-3u-ct5">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Дата рождения" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5XG-JL-ZNF">
+                                                    <rect key="frame" x="20" y="5" width="374" height="34"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="5XG-JL-ZNF" firstAttribute="top" secondItem="m0s-3u-ct5" secondAttribute="top" constant="5" id="1za-aJ-0IR"/>
+                                                <constraint firstAttribute="trailing" secondItem="5XG-JL-ZNF" secondAttribute="trailing" constant="20" id="CEt-bb-T8j"/>
+                                                <constraint firstAttribute="bottom" secondItem="5XG-JL-ZNF" secondAttribute="bottom" constant="5" id="fQ2-3E-3jf"/>
+                                                <constraint firstItem="5XG-JL-ZNF" firstAttribute="leading" secondItem="m0s-3u-ct5" secondAttribute="leading" constant="20" id="hGL-YR-pcj"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="p80-v8-WG1">
                                         <rect key="frame" x="0.0" y="246.5" width="414" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
@@ -139,6 +139,9 @@
                                                     <rect key="frame" x="20" y="5" width="374" height="34"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <state key="normal" title="Сохранить"/>
+                                                    <connections>
+                                                        <action selector="saveButton:" destination="QUU-aJ-3gz" eventType="touchUpInside" id="kyA-Z0-Fvk"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <constraints>
@@ -159,7 +162,10 @@
                     </tableView>
                     <navigationItem key="navigationItem" id="aYs-F5-9S3"/>
                     <connections>
+                        <outlet property="birthdayTextField" destination="5XG-JL-ZNF" id="rKQ-6C-Gdb"/>
                         <outlet property="companyName" destination="Qva-MA-bmI" id="4xy-I8-s8S"/>
+                        <outlet property="nameTextField" destination="TKg-dO-pW1" id="jJb-MS-bRd"/>
+                        <outlet property="secondNameTextField" destination="GMQ-6h-Zee" id="gMG-0k-OaL"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j7i-0g-xI1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
