--- a/TestProject/Base.lproj/Main.storyboard
+++ b/TestProject/Base.lproj/Main.storyboard
@@ -25,10 +25,10 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="uZw-QY-oiG">
-                                                    <rect key="frame" x="100" y="6.5" width="214" height="67.5"/>
+                                                <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="uZw-QY-oiG">
+                                                    <rect key="frame" x="100" y="6.5" width="214" height="87.5"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="70" id="tt3-KN-fa6"/>
+                                                        <constraint firstAttribute="height" constant="90" id="tt3-KN-fa6"/>
                                                     </constraints>
                                                 </imageView>
                                             </subviews>
@@ -165,6 +165,7 @@
                         <outlet property="birthdayTextField" destination="5XG-JL-ZNF" id="rKQ-6C-Gdb"/>
                         <outlet property="companyName" destination="Qva-MA-bmI" id="4xy-I8-s8S"/>
                         <outlet property="nameTextField" destination="TKg-dO-pW1" id="jJb-MS-bRd"/>
+                        <outlet property="photo" destination="uZw-QY-oiG" id="ErO-0v-i5Y"/>
                         <outlet property="secondNameTextField" destination="GMQ-6h-Zee" id="gMG-0k-OaL"/>
                     </connections>
                 </tableViewController>
